--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
+# Locally
+
 DATABASE_URL="postgresql://user:password@localhost:5432/assignment_8?schema=public"
+
+# Cloud Service.
+DATABASE_URL="postgres://postgres.ykmvfnnqbmeeqypzanto:[your-password]@aws-0-us-west-1.pooler.supabase.com:6543/postgres"
+
+DIRECT_URL="postgres://postgres.ykmvfnnqbmeeqypzanto:[your-password]@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
 
 NODE_ENV=DEVELOPMENT
 
